@@ -7,6 +7,7 @@
     <groupId>com.simtechdata</groupId>
     <artifactId>MacIcns</artifactId>
     <version>1.3.3</version>
+    <packaging>jar</packaging>
 
     <properties>
         <maven.compiler.release>20</maven.compiler.release>
@@ -23,6 +24,7 @@
         <maven-surefire-plugin>3.2.2</maven-surefire-plugin>
         <gluonfx-maven-plugin>1.0.21</gluonfx-maven-plugin>
         <maven-compiler-plugin>3.11.0</maven-compiler-plugin>
+        <maven-assembly-plugin>3.3.0</maven-assembly-plugin>
         <system-linker-arg/>
         <system-native-image-arg/>
         <compatibility-arg/>
@@ -52,28 +54,15 @@
         </dependency>
         <dependency>
             <groupId>com.simtechdata</groupId>
-            <artifactId>SceneOneFX</artifactId>
-            <version>1.4.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/.mvn/SceneOneFX/SceneOneFX-1.4.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>com.simtechdata</groupId>
-            <artifactId>EasyFXControls</artifactId>
-            <version>1.4.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/.mvn/EasyFXControls/EasyFXControls-1.4.0.jar</systemPath>
-        </dependency>
-        <dependency>
-            <groupId>org.buildobjects</groupId>
-            <artifactId>jproc</artifactId>
-            <version>2.8.2</version>
+            <artifactId>JavaProc</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
+<!--
     <build>
         <plugins>
-            <!-- Maven Versions -->
+            &lt;!&ndash; Maven Versions &ndash;&gt;
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
@@ -92,13 +81,13 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Maven compiler plugin-->
+            &lt;!&ndash; Maven compiler plugin&ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin}</version>
             </plugin>
-            <!-- Maven Surefire plugin-->
+            &lt;!&ndash; Maven Surefire plugin&ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -108,7 +97,7 @@
                     <argLine>-ea</argLine>
                 </configuration>
             </plugin>
-            <!-- JavaFX Maven Plugin -->
+            &lt;!&ndash; JavaFX Maven Plugin &ndash;&gt;
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
@@ -117,7 +106,7 @@
                     <mainClass>${mainClass}</mainClass>
                 </configuration>
             </plugin>
-            <!-- GluonFX GUI native image builder plugin -->
+            &lt;!&ndash; GluonFX GUI native image builder plugin &ndash;&gt;
             <plugin>
                 <groupId>com.gluonhq</groupId>
                 <artifactId>gluonfx-maven-plugin</artifactId>
@@ -128,11 +117,11 @@
                         <arg>${system-linker-arg}</arg>
                     </linkerArgs>
                     <nativeImageArgs>
-                        <arg>--enable-url-protocols=https</arg>
-                        <arg>--enable-url-protocols=http</arg>
-                        <arg>--no-fallback</arg>
-                        <arg>--verbose</arg>
-                        <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
+                        <arg>&#45;&#45;enable-url-protocols=https</arg>
+                        <arg>&#45;&#45;enable-url-protocols=http</arg>
+                        <arg>&#45;&#45;no-fallback</arg>
+                        <arg>&#45;&#45;verbose</arg>
+                        <arg>&#45;&#45;add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.jdk=ALL-UNNAMED</arg>
                         <arg>${system-native-image-arg}</arg>
                         <arg>${compatibility-arg}</arg>
                         <arg>-H:ReflectionConfigurationFiles=${project.basedir}/config/reflect-config.json</arg>
@@ -140,16 +129,18 @@
                     <appIdentifier>${mainClass}</appIdentifier>
                     <releaseConfiguration>
                         <vendor>Syphon</vendor>
-                        <description>MacIcns is a program that will take a single 1024x1024 png file and create a correctly formatted icns file</description>
+                        <description>MacIcns is a program that will take a single 1024x1024 png file and create a
+                            correctly formatted icns file
+                        </description>
                         <packageType>${package.type}</packageType>
                         <bundleShortVersion>${project.version}</bundleShortVersion>
                         <bundleVersion>${project.version}</bundleVersion>
-                        <!-- for macOS/iOS -->
+                        &lt;!&ndash; for macOS/iOS &ndash;&gt;
                         <skipSigning>true</skipSigning>
                     </releaseConfiguration>
                 </configuration>
             </plugin>
-            <!-- Maven Jar plugin-->
+            &lt;!&ndash; Maven Jar plugin&ndash;&gt;
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -163,37 +154,20 @@
                     </execution>
                 </executions>
             </plugin>
-<!--
-            &lt;!&ndash; GraalVM Native Maven Plugin &ndash;&gt;
+        </plugins>
+    </build>
+-->
+
+    <build>
+        <plugins>
             <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <version>${native-maven-plugin}</version>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>build-native</id>
-                        <goals>
-                            <goal>compile-no-fork</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
                 <configuration>
-                    <imageName>macicns</imageName>
-                    <mainClass>com.simtechdata.Main</mainClass>
-                    <verbose>true</verbose>
-                    <buildArgs>
-                        <buildArg>
-                            -H:ResourceConfigurationFiles=${project.basedir}/config/resources.json
-                        </buildArg>
-                        <buildArg>
-                            &#45;&#45;initialize-at-build-time=com.simtechdata.Main
-                        </buildArg>
-                    </buildArgs>
+                    <mainClass>${mainClass}</mainClass>
                 </configuration>
             </plugin>
--->
         </plugins>
     </build>
 
@@ -203,10 +177,67 @@
             <id>build-for-macos-latest</id>
             <properties>
                 <package.type>pkg</package.type>
-                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64</system-native-image-arg>
+                <system-native-image-arg>-Dsvm.platform=org.graalvm.nativeimage.Platform$MACOS_AMD64
+                </system-native-image-arg>
                 <system-linker-arg>${pom.basedir}/config/missing_symbols-macos-latest.o</system-linker-arg>
                 <mac.app.store>true</mac.app.store>
             </properties>
+        </profile>
+        <profile>
+            <id>jar</id>
+            <build>
+                <plugins>
+                    <!-- Maven Assembly Plugin -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <version>${maven-assembly-plugin}</version>
+                        <executions>
+                            <execution>
+                                <id>make-assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <descriptorRefs>
+                                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                                    </descriptorRefs>
+                                    <archive>
+                                        <manifest>
+                                            <addClasspath>true</addClasspath>
+                                            <classpathPrefix>lib/</classpathPrefix>
+                                            <mainClass>${mainClass}</mainClass>
+                                        </manifest>
+                                    </archive>
+                                    <finalName>MacIcns</finalName>
+                                    <appendAssemblyId>false</appendAssemblyId>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <!-- Maven Surefire plugin-->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven-surefire-plugin}</version>
+                        <configuration>
+                            <classpathDependencyExcludes>org.graalvm.nativeimage</classpathDependencyExcludes>
+                            <argLine>-ea</argLine>
+                            <argLine>--illegal-access=permit</argLine>
+                        </configuration>
+                    </plugin>
+                    <!-- Maven JavaFX plugin-->
+                    <plugin>
+                        <groupId>com.zenjava</groupId>
+                        <artifactId>javafx-maven-plugin</artifactId>
+                        <version>${javafx-maven-plugin}</version>
+                        <configuration>
+                            <mainClass>${mainClass}</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
     </profiles>
 </project>
